# ssq-checker

./: .gitignore  CLAUDE.md  README.md  bets.csv  pyproject.toml
.github/workflows/: draw.yml  test.yml
docs/: index.html
docs/data/: 2025-01.json  2025-02.json  2025-03.json  2025-04.json  2025-05.json  2025-06.json  2025-07.json  2025-08.json  2025-09.json  2025-10.json  2025-11.json  2025-12.json  2026-01.json  2026-02.json  2026-03.json  2026-04.json  2026-05.json  2026-06.json  index.json  stats.json
src/ssq_checker/: __init__.py  __main__.py  bets.py  checker.py  fetcher.py  history.py  notify.py  stats.py
tests/: test_bets.py  test_checker.py  test_fetcher.py  test_history.py  test_main.py  test_notify.py  test_stats.py
