[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ssq-checker"
version = "0.1.0"
description = "Check Chinese welfare lottery (双色球 SSQ) draws against fixed numbers."
requires-python = ">=3.10"
authors = [{name = "Logan"}]
license = {text = "MIT"}
dependencies = []  # stdlib only

[project.scripts]
ssq-checker = "ssq_checker.__main__:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
